Improved Chatbot UI and added more Unit Testing